Update Copyrights in Github/MobileExamples (#DOC-99) Fixed
Change-Id: Idcfff837ba26f46cb47fc5b89821c86c48e338bb

--- a/Android/ChannelViewer/app/src/main/res/values/colors.xml
+++ b/Android/ChannelViewer/app/src/main/res/values/colors.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright 2019 Phenix Real Time Solutions, Inc. Confidential and Proprietary. All Rights Reserved.
+  ~
+  ~  By using this code you agree to the Phenix Terms of Service found online here: http://phenixrts.com/terms-of-service.html
+  -->
+
 <resources>
   <color name="colorPrimary">#008577</color>
   <color name="colorPrimaryDark">#00574B</color>
