--- a/Android/WebView/app/src/main/res/values/colors.xml
+++ b/Android/WebView/app/src/main/res/values/colors.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright 2019 Phenix Real Time Solutions, Inc. Confidential and Proprietary. All Rights Reserved.
+  ~
+  ~  By using this code you agree to the Phenix Terms of Service found online here:
+  ~  http://phenixrts.com/terms-of-service.html
+  -->
+
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
