[iOS WebView demo] Support url editing
Change-Id: I9fd0e4b3455a355efebced731c90b7ea32538633

--- a/iOS/WebView/WebView/Base.lproj/Main.storyboard
+++ b/iOS/WebView/WebView/Base.lproj/Main.storyboard
@@ -1,26 +1,70 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WebView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="cb0-ZI-G0M">
+                                <rect key="frame" x="0.0" y="106" width="414" height="756"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ezF-Sp-rng">
+                                <rect key="frame" x="20" y="60" width="374" height="30"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xvn-Kv-fa3">
+                                        <rect key="frame" x="0.0" y="0.0" width="318" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <textInputTraits key="textInputTraits" textContentType="url"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8aa-c4-idb">
+                                        <rect key="frame" x="334" y="0.0" width="40" height="30"/>
+                                        <state key="normal" title="Apply"/>
+                                        <connections>
+                                            <action selector="loadUrl:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TKJ-j2-KqT"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="PMN-PD-Vjz" firstAttribute="trailing" secondItem="ezF-Sp-rng" secondAttribute="trailing" constant="20" id="1kB-3Z-cCY"/>
+                            <constraint firstItem="ezF-Sp-rng" firstAttribute="leading" secondItem="PMN-PD-Vjz" secondAttribute="leading" constant="20" id="2DK-7A-kY6"/>
+                            <constraint firstItem="PMN-PD-Vjz" firstAttribute="trailing" secondItem="cb0-ZI-G0M" secondAttribute="trailing" id="3I8-9B-dTs"/>
+                            <constraint firstItem="cb0-ZI-G0M" firstAttribute="leading" secondItem="PMN-PD-Vjz" secondAttribute="leading" id="8ti-1V-L0b"/>
+                            <constraint firstItem="cb0-ZI-G0M" firstAttribute="top" secondItem="ezF-Sp-rng" secondAttribute="bottom" constant="16" id="KMN-gq-1JO"/>
+                            <constraint firstItem="PMN-PD-Vjz" firstAttribute="bottom" secondItem="cb0-ZI-G0M" secondAttribute="bottom" id="cZN-q8-amv"/>
+                            <constraint firstItem="ezF-Sp-rng" firstAttribute="top" secondItem="PMN-PD-Vjz" secondAttribute="top" constant="16" id="kw0-Oq-b9N"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="PMN-PD-Vjz"/>
                     </view>
+                    <connections>
+                        <outlet property="editedUrl" destination="xvn-Kv-fa3" id="vwW-Dx-0VC"/>
+                        <outlet property="webView" destination="cb0-ZI-G0M" id="sp3-nA-faS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="34.782608695652179" y="18.75"/>
         </scene>
     </scenes>
 </document>
