--- a/Android/WebView/app/src/main/res/layout/activity_main.xml
+++ b/Android/WebView/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,27 @@
   ~  http://phenixrts.com/terms-of-service.html
   -->
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:orientation="vertical">
+
+  <EditText
+    android:id="@+id/newUrl"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.phenixrts.examples.webview.MainActivity"
-    >
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:hint="https://phenixrts.com/channel/#channel_alias"
+    android:imeOptions="actionGo"
+    android:inputType="textUri"
+    tools:ignore="HardcodedText"/>
 
-  <WebView xmlns:android="http://schemas.android.com/apk/res/android"
-      android:id="@+id/myWebView"
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:scrollbars="none"
-      >
-  </WebView>
+  <WebView
+    android:id="@+id/myWebView"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"
+    android:scrollbars="none"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
